--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pinia": "^3.0.3",
     "technicalindicators": "^3.1.0",
     "vue": "^3.5.17"
   },
